tests/paczka1/fuzzy1/93784695.err
Error in line 2: uWD3uZ0 S335 25,7
Error in line 4: 0bn1F1i A725 58,4
Error in line 7: 0bn1F1i A243 42,9
Error in line 9: 0bn1F1i S335 27,7
Error in line 11: yVPdwV S335 -1,5
Error in line 1: yVPdwV S335 23,9
Error in line 13: yVPdwV A725 56,7
Error in line 8: faPBCuRcpJ A243 45,4
Error in line 3: d64B A243 93,7
Error in line 28: uWD3uZ0 A920 18,7
Error in line 22: faPBCuRcpJ A243 61,2
Error in line 36: uWD3uZ0 A725 24,9
Error in line 23: A243 A920 95,3
